2000-01-29  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* oct-time.cc [! HAVE_STRPTIME]: Provide declaration.

2000-01-28  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array2.h (Array2<T>::get_size): Now protected instead of private.
	* Array3.h, Array3.cc: Use it in constructors and resize methods
	to get total size to be allocated.

	* DASSL.cc (DASSL::integrate): Declare do_restart and save_output
	as bool, not int.

2000-01-26  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array2-idx.h (assign (Array2<LT>& lhs, const Array2<RT>& rhs)): 
	Allow A(idx) = RHS if idx is a boolean index with the same shape
	as A, even when do_fortran_indexing is not enabled.
	(Array2<T>::index (idx_vector& idx) const): Likewise, for A(idx).

2000-01-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* dMatrix.cc (Matrix::solve (...)): Add new variant with
	function pointer as final arg.  Passed function (if any) will be
	called for singularity errors.
	* CMatrix.cc (ComplexMatrix::solve (...)): Likewise.

	* dMatrix.cc (Matrix::pseudo_inverse): Use economy SVD.
	* CMatrix.cc (ComplexMatrix::pseudo_inverse): Likewise.

	* lo-ieee.cc (octave_ieee_init): Don't include sunmath.h.
	No longer bother with infinity or quiet_nan.

	* Array2.cc (Array2<T>::get_size): New function.
	(Array2<T>::Array2, Array2<T>::resize): Use it.

2000-01-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Array2-idx.h (Array2<T>::maybe_delete_elements (idx_vector&)):
	New function.
	(assign (Array2<LT>& lhs, const Array2<RT>& rhs)):
	Use it when indexing with one arg instead of faking a second one.
	(Array2<T>::maybe_delete_elements (idx_vector&, idx_vector&)):
	Return empty matrices with the correct dimensions for A(:,:) = []
	and also A(:,idx) = [], and A(idx,:) = [] when idx enumerates all
	rows or columns.

	* idx-vector.cc (IDX_VEC_REP::is_colon_equiv): Recognize a bool
	vector that is all true values with a length equal to n as colon
	equivalent.

2000-01-22  John W. Eaton  <jwe@bevo.che.wisc.edu>
