@@ -1,3 +1,7 @@
+2000-01-30  John W. Eaton  <jwe@bevo.che.wisc.edu>
+
+	* image/saveimage.m: Delete some debugging code.
+
 2000-01-27  John W. Eaton  <jwe@bevo.che.wisc.edu>
 
 	* signal/sinc.m: Avoid reshaping.
